--- a/.github/workflows/docker-new.yml
+++ b/.github/workflows/docker-new.yml
@@ -1,11 +1,13 @@
 on:
-  repository_dispatch:
-  workflow_dispatch:
-  workflow_run:
-    workflows: ["release"]
-    types:
-      - completed
-      - requested
+  push:
+
+  # repository_dispatch:
+  # workflow_dispatch:
+  # workflow_run:
+  #   workflows: ["release"]
+  #   types:
+  #     - completed
+  #     - requested
 
 name: Publish Docker Image (new)
 jobs:
@@ -26,7 +28,7 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       DOCKER_DEPLOY_IMAGES: true
       # //TEMP replace with correct repo once we are happy with tags
-      DOCKER_REPO: lycheeverse/lychee-dev
+      DOCKER_REPO: fauust/lychee-dev
       DOCKER_PLATFORMS: linux/amd64,linux/arm64/v8
 
     steps:
@@ -79,8 +81,8 @@ jobs:
               printf "\n${line}\n${msg}\n${line}\n"
               docker pull -q --platform "$platform" "$image"
               echo -n "Image architecture: "
-              docker run --rm --entrypoint /bin/sh "$image" -c 'uname -m'
-              version=$(docker run --rm "$image" --version)
+              docker run --platform "$platform" --rm --entrypoint /bin/sh "$image" -c 'uname -m'
+              version=$(docker run --platform "$platform" --rm "$image" --version)
               echo "lychee version: $version"
               if [[ $TAG != "latest" ]] &&
               [[ $TAG != "$version" ]] &&
@@ -90,11 +92,6 @@ jobs:
               fi
           done
       - name: Check GitHub settings
-        if: >
-          github.event_name == 'push' &&
-          (github.ref == 'refs/heads/master' ||
-          startsWith(github.ref, 'refs/tags/')) &&
-          github.repository == 'lycheeverse/lychee'
         run: |
           missing=()
           [[ -n "${{ secrets.DOCKER_USERNAME }}" ]] || missing+=(DOCKER_USERNAME)
@@ -103,7 +100,6 @@ jobs:
             echo "Missing github secret: $i"
           done
           (( ${#missing[@]} == 0 )) || exit 1
-          echo "DOCKER_DEPLOY_IMAGES=true" >> $GITHUB_ENV
       - name: Login to DockerHub
         if: ${{ env.DOCKER_DEPLOY_IMAGES == 'true' }}
         uses: docker/login-action@v1
@@ -114,7 +110,7 @@ jobs:
         if: ${{ env.DOCKER_DEPLOY_IMAGES == 'true' }}
         run: |
           image_src="${DOCKER_REPO}:${TAG}"
-          image_dst="${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_REPO }}:${TAG}"
+          image_dst="${{ env.DOCKER_REPO }}:${TAG}"
           msg="Copy multi-arch docker images to DockerHub ($image)"
           line="${msg//?/=}"
           printf "\n${line}\n${msg}\n${line}\n"
